--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "flowbite": "^2.2.1"
+    "flowbite": "^2.2.1",
+    "theme-toggles": "^4.10.1"
   }
 }
